--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
     "ecmaVersion": 12
   },
   "rules": {
-    "linebreak-style": ["error", "windows"],
+    "linebreak-style": "off",
     "no-underscore-dangle": "off",
     "class-methods-use-this": "off",
     "implicit-arrow-linebreak": "off",
